--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "next build",
+    "build": "npm i --force && next build",
     "start": "next start",
     "lint": "next lint"
   },
@@ -12,20 +12,16 @@
     "@emotion/cache": "^11.13.1",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
-    "@fontsource/roboto": "^5.1.0",
     "@mui/icons-material": "^6.1.5",
     "@mui/lab": "^6.0.0-beta.13",
     "@mui/material": "^6.1.5",
     "@mui/material-nextjs": "^6.1.5",
     "@mui/utils": "^6.1.5",
-    "@vitest/coverage-istanbul": "^2.1.3",
-    "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "lucide-react": "^0.453.0",
     "next": "15.0.1",
     "platform": "^1.3.6",
-    "react": "19.0.0-rc-69d4b800-20241021",
-    "react-dom": "19.0.0-rc-69d4b800-20241021",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.1",
     "react-hook-form-mui": "^7.4.0",
     "tailwind-merge": "^2.5.4",
@@ -47,7 +43,6 @@
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5",
-    "vitest": "^2.1.3"
+    "typescript": "^5"
   }
 }
